--- a/main.css
+++ b/main.css
@@ -1,5 +1,15 @@
 body{
-    background-color: wheat;
+    background-color: lightgreen;
     font-family: sans-serif;
+    padding: 0 33%;
+}
+
+h1{
+    font-size: 2.5em;
+    text-align: center;
+}
+
+p{
+    font-size: 2em;
 }
 
